# executorch-mac-uv

./: .gitignore  README.md  main.py  pyproject.toml
