[project]
name = "executorch-proba"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "executorch>=0.6.0",
    "ruff>=0.11.13",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
]

[tool.pyright]
typeCheckingMode = "off"
ignore = ["*"]

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff]
line-length = 120
